--- a/package.json
+++ b/package.json
@@ -6,26 +6,24 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.0.1",
-    "@testing-library/user-event": "^14.1.0",
-    "@types/jest": "^28.1.1",
-    "@types/node": "^12.0.0",
+    "@types/jest": "^29.5.11",
+    "@types/katex": "^0.16.7",
+    "@types/node": "^20.11.5",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
-    "framer-motion": "^6.2.9",
+    "framer-motion": "^10.18.0",
+    "katex": "^0.16.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-icons": "^3.0.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+    "react-icons": "^5.0.1",
+    "react-scripts": "^5.0.1",
+    "typescript": "^5.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,5 +39,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-syntax-flow": "^7.23.3",
+    "@babel/plugin-transform-react-jsx": "^7.23.4",
+    "@craco/craco": "^7.1.0",
+    "postcss": "^8.4.33"
   }
 }
