--- a/package.json
+++ b/package.json
@@ -6,13 +6,9 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
-    "@types/jest": "^29.5.11",
-    "@types/katex": "^0.16.7",
-    "@types/node": "^20.11.5",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
     "framer-motion": "^10.18.0",
     "katex": "^0.16.9",
+    "postcss": "^8.4.33",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^5.0.1",
@@ -46,6 +42,10 @@
     "@babel/plugin-syntax-flow": "^7.23.3",
     "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@craco/craco": "^7.1.0",
-    "postcss": "^8.4.33"
+    "@types/jest": "^29.5.11",
+    "@types/katex": "^0.16.7",
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18"
   }
 }
