--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@vercel/speed-insights": "^1.0.5",
     "framer-motion": "^10.18.0",
     "katex": "^0.16.9",
     "postcss": "^8.4.33",
