--- a/package.json
+++ b/package.json
@@ -15,7 +15,19 @@
     "react-dom": "^18.1.0",
     "react-icons": "^5.0.1",
     "react-scripts": "^5.0.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "workbox-background-sync": "^7.0.0",
+    "workbox-broadcast-update": "^7.0.0",
+    "workbox-cacheable-response": "^7.0.0",
+    "workbox-core": "^7.0.0",
+    "workbox-expiration": "^7.0.0",
+    "workbox-google-analytics": "^7.0.0",
+    "workbox-navigation-preload": "^7.0.0",
+    "workbox-precaching": "^7.0.0",
+    "workbox-range-requests": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0",
+    "workbox-streams": "^7.0.0"
   },
   "scripts": {
     "start": "craco start",
