--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^5.0.1",
     "react-scripts": "^5.0.1",
+    "react-swipeable": "^7.0.1",
     "typescript": "^5.3.3",
     "workbox-background-sync": "^7.0.0",
     "workbox-broadcast-update": "^7.0.0",
