--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@tanstack/react-query": "^5.25.0",
     "@vercel/analytics": "^1.1.2",
     "@vercel/speed-insights": "^1.0.5",
+    "@web3modal/wagmi": "^4.0.13",
     "framer-motion": "^10.18.0",
     "katex": "^0.16.9",
     "react": "^18.1.0",
@@ -16,6 +18,8 @@
     "react-scripts": "^5.0.1",
     "react-swipeable": "^7.0.1",
     "typescript": "^5.3.3",
+    "viem": "^2.7.22",
+    "wagmi": "^2.5.7",
     "workbox-background-sync": "^7.0.0",
     "workbox-broadcast-update": "^7.0.0",
     "workbox-cacheable-response": "^7.0.0",
