--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
     "@types/jest": "^29.5.11",
     "@types/katex": "^0.16.7",
