--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "craco eject"
+    "eject": "craco eject",
+    "generate:abi": "wagmi generate"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -61,6 +62,7 @@
     "@types/katex": "^0.16.7",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18"
+    "@types/react-dom": "^18.2.18",
+    "@wagmi/cli": "^2.1.2"
   }
 }
